<resources>
    <string name="app_name">My Application in Kotlin</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_litro">KMs por Litro</string>
    <string name="total_gasto">Seu gasto total será de:</string>

    <string name="validation">Preencha os campos vazios!</string>
</resources>