<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ddd"
    android:padding="5dp"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distancia"
        android:layout_marginTop="8dp"
        android:id="@+id/edit_distance"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:layout_marginTop="32dp"
        android:id="@+id/edit_price"
        android:inputType="numberDecimal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_litro"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:layout_marginTop="32dp"
        android:id="@+id/edit_autonome"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_litro"
        android:gravity="center"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_gasto"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="R$ 0"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="35sp"
        android:textColor="@color/purple_700"
        />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CALCULAR"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:padding="16dp"
        android:backgroundTint="@color/teal_700"
        />

</LinearLayout>